# mksqlite

./: .gitignore  CMakeLists.txt  Changelog.txt  Doxyfile  LICENSE  README.MD  README.TXT  buildit.m  compressor.hpp  config.h  config.h.in  git_revision.h  git_revision.h.in  global.hpp  heap_check.hpp  locale.hpp  mksqlite.cpp  mksqlite.dox  mksqlite.m  mksqlite.mexa64  mksqlite.mexmaca64  mksqlite.mexmaci64  mksqlite.mexw64  mksqlite_en.m  number_compressor.hpp  serialize.hpp  sql.m  sql_builtin_functions.hpp  sql_interface.hpp  sql_user_functions.hpp  sqlite_test_regex.m  svn_revision.dummy  svn_revision.h  typed_blobs.hpp  utils.hpp  value.hpp
blosc/: blosc.c  lz4.h  shuffle.c
blosc/win32/: pthread.c  pthread.h
branches/structural_cleanup/: Doxyfile  buildit.m  config.h  global.hpp  heap_check.hpp  locale.hpp  mksqlite.cpp  mksqlite.dox  mksqlite_en.m  number_compressor.hpp  serialize.hpp  sql_interface.hpp  sql_user_functions.hpp  svn_revision.dummy  svn_revision.h  typed_blobs.hpp  utils.hpp  value.hpp
branches/structural_cleanup/deelx/: deelx.h
branches/structural_cleanup/docs/: index.html  mksqlite_ger.html
branches/structural_cleanup/doxy/: examples.dox
branches/structural_cleanup/test/: publish_examples.m  sqlite_test_access_mode.m  sqlite_test_bind.m  sqlite_test_bind_typed.m  sqlite_test_bind_wrapping.m  sqlite_test_load_extension.m  sqlite_test_md5_and_packaging.m  sqlite_test_result_types.m
deelx/: deelx.h
docs/: index.html  mksqlite_eng.html  mksqlite_ger.html
docu/: index.html  mksqlite_eng.html  mksqlite_ger.html
doxy/: detail_desc.dox  examples.dox  intro.html  mksqlite_eng.html  references.dox
logging/: CMakeLists.txt
logo/: mksqlite-logo.xcf
md5/: CMakeLists.txt  md5.c
py/: filter.py
sqlite/: CMakeLists.txt  uuid.c
tags/1.10/: mksqlite.cpp
tags/1.12/: buildit.m  mksqlite.cpp
tags/1.12/docu/: mksqlite_eng.html  mksqlite_ger.html
tags/1.13/: Changelog.txt  buildit.m  mksqlite.cpp  mksqlite.m  sqlite_test_bind.m  svn_revision.dummy
tags/1.13/blosc/: lz4hc.c
tags/1.13/deelx/: deelx.h
tags/1.13/docu/: mksqlite_eng.html  mksqlite_ger.html
tags/1.13/tags/1.1/: Changelog.txt
tags/1.13/tags/1.1/docu/: mksqlite_eng.html
tags/1.13/tags/1.10/: Changelog.txt
tags/1.13/tags/1.10/docu/: mksqlite_eng.html
tags/1.13/tags/1.2/: mksqlite.cpp
tags/1.13/tags/1.3/: Changelog.txt
tags/1.13/tags/1.5/: Changelog.txt
tags/1.13/tags/1.5/docu/: mksqlite_ger.html
tags/1.13/tags/1.7/: Changelog.txt  mksqlite.cpp
tags/1.13/tags/1.8/: mksqlite.cpp
tags/1.13/tags/1.9/docu/: mksqlite_eng.html
tags/1.13/test/: sqlite_test_bind_typed_compressed.m
tags/1.13/trunk/: deelx.h
tags/1.14/: sql.m
tags/1.14/blosc/: blosc.h  lz4hc.c
tags/1.15/: mksqlite.cpp
tags/1.15/docu/: mksqlite_ger.html
tags/1.2/: Changelog.txt  sqlite3.c
tags/1.3/: mksqlite.cpp
tags/1.4/: buildit.m
tags/1.4/docu/: mksqlite_ger.html
tags/1.5/docu/: mksqlite_eng.html
tags/1.6/: mksqlite.cpp
tags/1.6/docu/: mksqlite_eng.html
tags/1.7/docu/: mksqlite_eng.html
tags/1.8/: Changelog.txt
tags/1.9/docu/: mksqlite_ger.html
tags/2.0/: README.TXT  mksqlite_en.m  sql.m
tags/2.0/blosc/: NEWS
tags/2.0/doxy/: examples.dox  references.dox
tags/2.0/logo/: mksqlite_logo.m
tags/2.0/test/: publish_examples.m  sqlite_exceptions.m  sqlite_real_example.m  sqlite_test_big_int.m  sqlite_test_regex.m
tags/2.0beta/: global.hpp  mksqlite.m  serialize.hpp  sql.m  sql_interface.hpp  utils.hpp
tags/2.0beta/doxy/: detail_desc.dox  intro.html
test/: sqlite_exceptions.m  sqlite_real_example.m  sqlite_real_example_no_regex.m  sqlite_test.m  sqlite_test_access_mode.m  sqlite_test_appdef_functions.m  sqlite_test_big_int.m  sqlite_test_bind.m  sqlite_test_bind_named.m  sqlite_test_bind_typed.m  sqlite_test_bind_typed_compressed.m  sqlite_test_bind_typed_wrapped.m  sqlite_test_bind_wrapping.m  sqlite_test_blosc.m  sqlite_test_load_extension.m  sqlite_test_md5_and_packaging.m  sqlite_test_object.m  sqlite_test_regex.m  sqlite_test_result_types.m  sqlite_test_rows_changed.m
trunk/: Changelog.txt  Doxyfile  README.TXT  buildit.m  config.h  deelx.h  mksqlite.cpp  mksqlite.m  mksqlite_en.m  sql.m  sql_interface.hpp  sql_user_functions.hpp  sqlite_test_bind.m  sqlite_test_regex.m  svn_revision.dummy  svn_revision.h  utils.hpp  value.hpp
trunk/blosc/: blosclz.c  lz4.c  lz4.h  lz4hc.h
trunk/docu/: index.html  mksqlite_eng.html  mksqlite_ger.html
trunk/doxy/: intro.html
trunk/test/: logfile.asc  sqlite_test_bind_typed.m  sqlite_test_bind_typed_compressed.m  sqlite_test_blosc.m  sqlite_test_md5_and_packaging.m
